Trying to fix image issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,9 @@ body {
   /* background-image: none; */
   background-position: center center;
   background-repeat: no-repeat;
-  /* -webkit-background-size: cover;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover; */
+  -o-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
 }
